# spotify-car-thing-bt

./: Cargo.toml  README.md
carthing_server/: Cargo.toml
carthing_server/src/: main.rs
carthing_server/src/apps/: deskthing.rs  mod.rs
carthing_server/src/sys/: mod.rs  win.rs
carthing_server/src/workers/: deskthing_bridge.rs  json_websocket.rs  mod.rs  stock_spotify.rs
