[package]
name = "carthing_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bstr = "1.0.1"
cfg-if = "1.0.0"
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = "1.0.147"
uuid = "1.2.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Networking_WinSock",
    "Win32_Devices_Bluetooth",
]
