[package]
name = "carthing_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
chrono = "0.4"
num_enum = "0.5.7"
rmp-serde = "1.1"
rmpv = "1.0.0"
serde-transcode = "1.1"
serde_json = "1.0"
uuid = "1.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Networking_WinSock",
    "Win32_Devices_Bluetooth",
]
